5.7.3 modal overflow fix

--- a/src/components/DeleteModal/deleteModal.css
+++ b/src/components/DeleteModal/deleteModal.css
@@ -4,9 +4,9 @@
 	background-color: rgba(128, 128, 128, 0.4);
 	position: absolute;
 	top: 0;
-	bottom: 0;
-	right: 0;
 	left: 0;
+	width: 100vw;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
